--- a/expenseTracker/src/components/styles/AdminDashboard.css
+++ b/expenseTracker/src/components/styles/AdminDashboard.css
@@ -54,12 +54,19 @@
   /* Chart Card */
   .chart-card {
     background: white;
-    padding: 20px;
-    border-radius: 10px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    width: 45%;
+    padding: 1.5rem;
+    border-radius: 0.8rem;
+    box-shadow: 0 0.2rem 0.8rem rgba(0, 0, 0, 0.2);
     text-align: center;
+    min-width: 10rem;
   }
+  canvas{
+    min-height: 80% !important;
+  }
+
+  
+
+
   
   h3 {
     margin-bottom: 10px;
