--- a/expenseTracker/src/components/styles/categorymanager.css
+++ b/expenseTracker/src/components/styles/categorymanager.css
@@ -6,9 +6,11 @@
     background: #f8f9fa;
     display: flex;
     justify-content: center;
+    min-height: calc(100vh - 7rem);
 }
 
 .category-container {
+    max-height: max-content;
     display: flex;
     flex-direction: column;
     width: 50%;
