--- a/expenseTracker/src/components/styles/users.css
+++ b/expenseTracker/src/components/styles/users.css
@@ -5,11 +5,14 @@
     background: #f8f9fa;
     display: flex;
     justify-content: center;
+    min-height: calc(100vh - 7rem);
+
 }
 .users-container {
+    height: max-content;
     display: flex;
     flex-direction: column;
-    width:75%;
+    width:70%;
     background: white;
     padding: 2rem;
     padding-top: 0rem;
