--- a/expenseTracker/src/index.css
+++ b/expenseTracker/src/index.css
@@ -1,9 +1,19 @@
-
-body{
+/* Global Reset */
+body {
   margin: 0;
   padding: 0;
+  font-family: sans-serif;
 }
 
-.toast-container{
-  top:5rem;
+/* For regular toast positioning */
+.toast-container {
+  top: 5rem;
+  border-radius: 8rem;
+}
+
+@media (max-width: 700px) {
+  .toast-container:not(.Toastify__toast-container) {
+    transform: translateX(-50%);
+  }
+
 }
